Фильтрация и постраничная разбивка справочника.

--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,6 @@
 |  Работа со справочниками                                                                                             |
 +----------------------------------------------------------------------------------------------------------------------+
 
-Фильтрация и постраничная разбивка справочника.
-
 Избавиться от titlePanel в форме.
 
 Отслеживать изменения в форме и если изменения происходили, не давать переходить в главном меню, или открывать новый
@@ -17,6 +15,10 @@
 другим полям.
 
 Дополнительные настройки полей: json с настройками, для каждоготипа своими.
+
+Поля типа HTML.
+
+Поля типа select
 
 +----------------------------------------------------------------------------------------------------------------------+
 |  Работа со структурой сайта                                                                                          |
