showCondition, пока сделал и протестил: строки, числа, даты. Нужно сделать: дата и время, pointer

--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,8 @@
 
 Сделать вычисляемые поля.
 
+Редакторы Simple и RelatedModels
+
 Значения поля по умолчанию, с возможностью обращения как к среде (например к главному меню панели упраления), так и к
 другим полям.
 
