Сделал условия отображения + пофиксил несколько багов в детализациях

--- a/todo.txt
+++ b/todo.txt
@@ -2,10 +2,14 @@
 |  Работа со справочниками                                                                                             |
 +----------------------------------------------------------------------------------------------------------------------+
 
+-- DONE: Фильтрация и постраничная разбивка справочника.
+
+-- DONE: Избавиться от titlePanel в форме.
+
 Отслеживать изменения в форме и если изменения происходили, не давать переходить в главном меню, или открывать новый
 документ в справочнике.
 
-Сделать условия отображения полей в форме.
+-- DONE: Сделать условия отображения полей в форме.
 
 Сделать вычисляемые поля.
 
