Сделал поддержку вычисляемых полей

--- a/todo.txt
+++ b/todo.txt
@@ -11,7 +11,7 @@
 
 -- DONE: Сделать условия отображения полей в форме.
 
-Сделать вычисляемые поля.
+-- DONE: Сделать вычисляемые поля.
 
 Редакторы Simple и RelatedModels
 
