--- a/todo.txt
+++ b/todo.txt
@@ -18,7 +18,7 @@
 Значения поля по умолчанию, с возможностью обращения как к среде (например к главному меню панели упраления), так и к
 другим полям.
 
-Дополнительные настройки полей: json с настройками, для каждоготипа своими.
+-- DONE: Дополнительные настройки полей: json с настройками, для каждоготипа своими.
 
 Поля типа HTML.
 
