Сделал HTML поля

--- a/todo.txt
+++ b/todo.txt
@@ -20,7 +20,7 @@
 
 -- DONE: Дополнительные настройки полей: json с настройками, для каждоготипа своими.
 
-Поля типа HTML.
+-- DONE: Поля типа HTML.
 
 Поля типа select
 
