Закончил поля типа select

--- a/todo.txt
+++ b/todo.txt
@@ -22,7 +22,7 @@
 
 -- DONE: Поля типа HTML.
 
-Поля типа select
+-- DONE: Поля типа select
 
 +----------------------------------------------------------------------------------------------------------------------+
 |  Работа со структурой сайта                                                                                          |
