Начал иерархические справочники и SimpleEditor

--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,9 @@
 
 -- DONE: Сделать вычисляемые поля.
 
-Редакторы Simple и RelatedModels
+Иерархические справочники без подчинения и редактор Simple
+
+Подчиненые справочники и редактор RelatedModels
 
 Значения поля по умолчанию, с возможностью обращения как к среде (например к главному меню панели упраления), так и к
 другим полям.
