--- a/index.next/todo.txt
+++ b/index.next/todo.txt
@@ -13,7 +13,7 @@
 
 -- DONE: Сделать вычисляемые поля.
 
-Иерархические справочники без подчинения и редактор Simple
+-- DONE: Иерархические справочники без подчинения и редактор Simple
 
 Подчиненые справочники и редактор RelatedModels
 
@@ -28,7 +28,7 @@
 
 В модальных окнах для выбора элемента справочника сделать быструю фильтрацию по полю identify
 
-Перенести всю тему backend в модуль backend, чтобы темы только для фронта использовались
+-- DONE: Перенести всю тему backend в модуль backend, чтобы темы только для фронта использовались
 
 +----------------------------------------------------------------------------------------------------------------------+
 |  Работа со структурой сайта                                                                                          |
